--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,21 @@
-# main links links
 main:
   - title: "About Me"
-    url: "/#about-me"
-
-  - title: "News"
-    url: "/#-news"
-
-  - title: "Publications"
-    url: "/#-publications"
-
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+    url: "#about-me"
 
   - title: "Educations"
-    url: "/#-educations"
+    url: "#educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "Publications"
+    url: "#publications"
 
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "Projects"
+    url: "#projects"
+
+  - title: "Patents"
+    url: "#patents"
+
+  - title: "Services"
+    url: "#services"
+
+  - title: "Awards"
+    url: "#awards"
