测试中英文切换5

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "孙泽敏"
-  avatar           : "images/avatar.png"
+  avatar           : "/images/avatar.png"
   bio              : "Zemin Sun"
   location         : "Jilin, China"
   employer         :
