引用显示设置2

--- a/.github/workflows/google_scholar_crawler.yaml
+++ b/.github/workflows/google_scholar_crawler.yaml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
     - name: Install Reqs
       run: |
         sudo apt-get install python3-setuptools
@@ -19,13 +21,19 @@ jobs:
         pip3 install -r requirements.txt
         python3 main.py
         if [ -d "./results" ]; then
-          cd ./results
-          git init
+          # Copy results to main branch google-scholar-stats directory
+          mkdir -p ../google-scholar-stats
+          cp ./results/*.json ../google-scholar-stats/
+          
+          # Configure git for main branch
+          cd ..
           git config --local user.name "${GITHUB_ACTOR}"
-          export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git"
-          git add *.json
-          git commit -m "Updated Citation Data"
-          git push "${remote_repo}" HEAD:google-scholar-stats --force
+          git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          
+          # Add and commit changes to main branch
+          git add google-scholar-stats/*.json
+          git commit -m "Update Google Scholar citation data [skip ci]"
+          git push origin HEAD:main
         else
           echo "results directory does not exist, skipping commit and push"
         fi
