更新主页索引3

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ google_scholar_stats_use_cdn : false
 google_analytics_id      :  G-2TR4YL8QPE # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
-google_site_verification :  GCu61KyEMl1MBLjBgPTykDli2rPsv8UnMQK4GfGjTkQ # get google_site_verification from https://search.google.com/search-console/about
+google_site_verification :   # get google_site_verification from https://search.google.com/search-console/about
 bing_site_verification   :  0A5ABF80DE5DB07A0EFEEAE49387F99F # get from https://www.bing.com/webmasters/about
 baidu_site_verification  :  # get from https://ziyuan.baidu.com/login/index?u=/site/index
 
